--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
-    "sass": "^1.54.5"
+    "sass": "^1.54.5",
+    "swiper": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.22.0",
